feat(bopclients): add organization and team administration
